Fix  Post List Background Color in Dark Mode

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -316,7 +316,7 @@ footer {
         color: #ddd;
     }
 
-    .item-list > li {
+    .item.posts {
         background-color: #333;
     }
 
